2006-11-02  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/AllClass.R (Matrix-class): check length of dimnames in validity.

	* tests/simple.R: validObject() checking the above.

	* src/dgCMatrix.c (gCMatrix_validate): new, small and simple,
	replacing both dgCMatrix_validate and lgCM*.

	* src/Csparse.c (Csparse_dense_prod, etc): do not lose dimnames;
	fix dimnames setting in other places.
	* src/chm_common.c (chm_dense_to_SEXP): now can pass dimnames

2006-11-01  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Csparse.R,src/Csparse.c, etc: tcrossprod(<CsparseM>,<CsparseM>)

	* R/sparseMatrix.R (isSymmetric): drop 'factors' slot for
	symmetry test, via
	* R/Auxiliaries.R (.as.dgC.0.factors):

2006-11-01  Douglas Bates  <bates@r-project.org>

	* R/Csparse.R,src/Csparse.c,tests/matprod.R,
	man/CsparseMatrix-class.Rd: crossprod(<CsparseMatrix>,
	<CsparseMatrix>) added

2006-10-30  Martin Maechler  <maechler@stat.math.ethz.ch>

	* tests/matprod.R: add a variation of Harri's example

	* R/dsparseMatrix.R: fix crossprod(<dsparse>, <dge>) to *not*
	recursive infinitely.

	* R/dgCMatrix.R: + solve(<sparse>, <sparse>)

	* tests/indexing.R: add test for the "<" bug fixed 10-27 in R/dMatrix.R

2006-10-28  Martin Maechler  <maechler@stat.math.ethz.ch>

	* tests/Class+Meth.R (tstMatrixClass): more: use non-trivial
	matrix if possible; test m+m == 2*m; now test dgRMatrix.
	* R/dgRMatrix.R (.to.dgR): a few more coercions, in order to
	satisfy the above test.

2006-10-27  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Matrix.R (Ops):  <Matrix> o <matrix>  method added

	* R/dgCMatrix.R: solve(a, b="missing") based on
	* src/dgCMatrix.c (dgCMatrix_matrix_solve): extend to work with
	RHS = NULL.

	* R/diagMatrix.R (diagdiagprod): extend %*% etc to ldiMatrix;
	add more (needed) [t]crossprod() methods.

	* man/ddiMatrix-class.Rd: more info, notably on 'diag'

	* R/Auxiliaries.R (as_CspClass): cleanup
	(drop0): internal utility for "Csparse_drop(*, 0)"