@@ -4,21 +4,24 @@
 
 SEXP Tsparse_validate(SEXP x)
 {
+    /* NB: we do *NOT* check a potential 'x' slot here, at all */
     SEXP
 	islot = GET_SLOT(x, Matrix_iSym),
 	jslot = GET_SLOT(x, Matrix_jSym),
 	dimslot = GET_SLOT(x, Matrix_DimSym);
     int j,
-	*dims = INTEGER(dimslot),
-	ncol, nrow, nnz = length(islot),
+	nrow = INTEGER(dimslot)[0],
+	ncol = INTEGER(dimslot)[1],
+	nnz = length(islot),
 	*xj = INTEGER(jslot),
 	*xi = INTEGER(islot);
 
     if (length(jslot) != nnz)
 	return mkString(_("lengths of slots i and j must match"));
+    /* FIXME: this is checked in super class -- no need to do here: */
     if (length(dimslot) != 2)
 	return mkString(_("slot Dim must have length 2"));
-    nrow = dims[0]; ncol = dims[1];
+
     for (j = 0; j < nnz; j++) {
 	if (xi[j] < 0 || xi[j] >= nrow)
 	    return mkString(_("all row indices must be between 0 and nrow-1"));
