@@ -1,12 +1,5 @@
 #include "dsCMatrix.h"
 
-SEXP dsCMatrix_validate(SEXP obj)
-{
-    SEXP val = symmetricMatrix_validate(obj);
-    if(isString(val)) return(val);
-    return ScalarLogical(1);
-}
-
 SEXP dsCMatrix_chol(SEXP x, SEXP pivot)
 {
     cholmod_factor
