@@ -3,7 +3,6 @@
 
 #include "Mutils.h"
 
-SEXP dsTMatrix_validate(SEXP x);
 SEXP dsTMatrix_as_dsyMatrix(SEXP x);
 SEXP dsTMatrix_as_dgTMatrix(SEXP x);
 
